--- a/quarkus-server-mtls/src/main/resources/application.properties
+++ b/quarkus-server-mtls/src/main/resources/application.properties
@@ -6,8 +6,8 @@ quarkus.http.ssl-port=8443
 quarkus.http.ssl.certificate.key-store-file=META-INF/resources/server.keystore
 quarkus.http.ssl.certificate.key-store-password=password
 
-quarkus.http.port=8080
-#quarkus.http.test-port=8889
+quarkus.http.port=8280
+#quarkus.http.test-port=8281
 
 quarkus.http.ssl.client-auth=required
 quarkus.http.ssl.certificate.trust-store-file=META-INF/resources/server.truststore
@@ -15,8 +15,9 @@ quarkus.http.ssl.certificate.trust-store-password=password
 
 quarkus.http.ssl.protocols=TLSv1.2
 
-quarkus.kubernetes.deploy=true
-#quarkus.openshift.expose=true
-quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11
+//Enable this properties to deploy on OpenShift
+#quarkus.kubernetes.deploy=true
+##quarkus.openshift.expose=true
+#quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11
 
-quarkus.kubernetes-client.trust-certs=true
+#quarkus.kubernetes-client.trust-certs=true
