--- a/quarkus-client-mtls/src/main/resources/application.properties
+++ b/quarkus-client-mtls/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Configuration file
 # key = value
-//The url must be set to the environemt where the server is deployed, if you are using client and server in openshift you can use the 'service' name instead of the Route
+###The url must be set to the environemt where the server is deployed, if you are using client and server in openshift you can use the 'service' name instead of the Route
 org.acme.client.mtls.GreetingService/mp-rest/url=https://localhost:8443
 #org.acme.client.mtls.GreetingService/mp-rest/url=https://server:8443
 org.acme.client.mtls.GreetingService/mp-rest/trustStore=classpath:/META-INF/resources/client.truststore
@@ -11,7 +11,7 @@ org.acme.client.mtls.GreetingService/mp-rest/keyStorePassword=password
 quarkus.ssl.native=true
 quarkus.http.ssl.protocols=TLSv1.2
 
-//Enable this properties to deploy on OpenShift
+###Enable this properties to deploy on OpenShift
 #quarkus.kubernetes.deploy=true
 #quarkus.openshift.expose=true
 #quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11
