--- a/quarkus-server-mtls/src/main/resources/application.properties
+++ b/quarkus-server-mtls/src/main/resources/application.properties
@@ -15,7 +15,7 @@ quarkus.http.ssl.certificate.trust-store-password=password
 
 quarkus.http.ssl.protocols=TLSv1.2
 
-//Enable this properties to deploy on OpenShift
+###Enable this properties to deploy on OpenShift
 #quarkus.kubernetes.deploy=true
 ##quarkus.openshift.expose=true
 #quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11
